Blackpurl/src/objects/Deal_Unresolved_Fulfillment__c.object
<CustomObject>
    <description>Deal Unresolved Fulfillment</description>
    <fields>
        <fullName>Action_Required__c</fullName>
        <label>Action Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add to Deal</fullName>
                </value>
                <value>
                    <fullName>Remove from Deal</fullName>
                </value>
                <value>
                    <fullName>Update Deal</fullName>
                </value>
                <value>
                    <fullName>Fulfill or Wait</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Actual_Quantity__c</fullName>
        <label>Actual Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CO_Kit_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CO Kit Header</label>
        <referenceTo>CO_Kit_Header__c</referenceTo>
        <relationshipLabel>Deal Unresolved Fulfillments</relationshipLabel>
        <relationshipName>Deal_Unresolved_Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CO_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CO Line Item</description>
        <label>CO Line Item</label>
        <referenceTo>CO_Line_Item__c</referenceTo>
        <relationshipLabel>Deal Unresolved Fulfillments</relationshipLabel>
        <relationshipName>Deal_Unresolved_Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charge_Method__c</fullName>
        <label>Charge Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Do Not Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Owned_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Customer Owned Unit</description>
        <label>Customer Owned Unit</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Customer_Owned_Unit__c.Unit_Type__c</field>
                <operation>equals</operation>
                <value>STOCK</value>
            </filterItems>
            <filterItems>
                <field>Customer_Owned_Unit__c.Unit_Type__c</field>
                <operation>equals</operation>
                <value>ORDU</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer_Owned_Unit__c</referenceTo>
        <relationshipLabel>Deal Unresolved Fulfillments</relationshipLabel>
        <relationshipName>Deal_Unresolved_Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deal Item</description>
        <label>Deal Item</label>
        <referenceTo>Deal_Item__c</referenceTo>
        <relationshipLabel>Deal Unresolved Fulfillments</relationshipLabel>
        <relationshipName>Deal_Unresolved_Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Kit_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Kit Header</label>
        <referenceTo>Deal_Kit_Header__c</referenceTo>
        <relationshipLabel>Deal Unresolved Fulfillments</relationshipLabel>
        <relationshipName>Deal_Unresolved_Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Deal</description>
        <label>Deal</label>
        <referenceTo>Deal__c</referenceTo>
        <relationshipLabel>Deal Unresolved Fulfillments</relationshipLabel>
        <relationshipName>Deal_Unresolved_Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Resolved</description>
        <label>Is Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Code__c</fullName>
        <label>Item Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Description__c</fullName>
        <description>Item Description</description>
        <label>Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Option_Fee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Option &amp; Fee</description>
        <label>Option &amp; Fee</label>
        <referenceTo>Option_Fee__c</referenceTo>
        <relationshipLabel>Deal Unresolved Fulfillments</relationshipLabel>
        <relationshipName>Deal_Unresolved_Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Option_And_Fees__c</fullName>
        <label>Related Option And Fees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_For_Unit__c</fullName>
        <description>Required For Unit</description>
        <label>Required For Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Order_Kit_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Order Kit Header</label>
        <referenceTo>Service_Order_Kit_Header__c</referenceTo>
        <relationshipLabel>Deal Unresolved Fulfillments</relationshipLabel>
        <relationshipName>Deal_Unresolved_Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service Order Line Item</description>
        <label>Service Order Line Item</label>
        <referenceTo>Service_Order_Line_Item__c</referenceTo>
        <relationshipLabel>Deal Unresolved Fulfillments</relationshipLabel>
        <relationshipName>Deal_Unresolved_Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Added</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>Updated</fullName>
                </value>
                <value>
                    <fullName>Partially Fufilled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_Quantity__c</fullName>
        <label>Updated Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to user</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Deal_Unresolved_Fulfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Deal Unresolved Fulfillment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DUF-{00000000}</displayFormat>
        <label>Deal Unresolved Fulfillment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Unresolved Fulfillments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>